<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_activation">Activation</string>
    <string name="about_device_id_format">Device id: %s</string>
    <string name="about_enter_activation_code">Use a license code</string>
    <string name="about_ids_copy">( tap to copy )</string>
    <string name="about_ids_copy_format">"Device id: %1$s
Server node: %2$s"</string>
    <string name="about_images_by_unsplash">Backgrounds by unsplash.com</string>
    <string name="about_line_1">Sugar Mail</string>
    <string name="about_line_2">Copyright © Kostya Vasilyev, 2019–2024</string>
    <string name="about_line_3">Version %1$s %2$s</string>
    <string name="about_logging">Debug logging</string>
    <string name="about_server_node_format">Server node: %s</string>
    <string name="about_third_party_licenses">Third party licenses</string>
    <string name="access_camera">Camera</string>
    <string name="access_close_cc_bcc">Clear / close</string>
    <string name="access_close_read_receipt">Cancel</string>
    <string name="access_collapse">Collapse</string>
    <string name="access_color">Color</string>
    <string name="access_color_rgb">Red %1$d, green %2$d, blue %3$d</string>
    <string name="access_delete">Delete</string>
    <string name="access_directory">Directory</string>
    <string name="access_drag">Drag</string>
    <string name="access_empty">Empty</string>
    <string name="access_expand">Expand</string>
    <string name="access_file">File</string>
    <string name="access_files">Files</string>
    <string name="access_history">History</string>
    <string name="access_icon">Icon</string>
    <string name="access_is_not_starred">Is not starred</string>
    <string name="action_add_account">Add account</string>
    <string name="action_add_formatting">Add formatting</string>
    <string name="action_add_to_bundle">Add to bundle</string>
    <string name="action_attach">Attach</string>
    <string name="action_block_sender">Block sender</string>
    <string name="action_categories">Categories</string>
    <string name="action_debug_delete_stored_files">Delete stored files</string>
    <string name="action_debug_menu">Debug</string>
    <string name="action_debug_purchase_prompt">Purchase prompt</string>
    <string name="action_debug_purchase_screen">Purchase screen</string>
    <string name="action_debug_reset_help_prompts">Reset help prompts</string>
    <string name="action_debug_reset_purchase_data">Reset purchase data</string>
    <string name="action_debug_search_reindex">Reindex search</string>
    <string name="action_debug_threads_reindex">Reindex threads</string>
    <string name="action_debug_ui_lock_check">UI lock: check</string>
    <string name="action_debug_ui_lock_set">UI lock: set</string>
    <string name="action_debug_welcome">Welcome activity</string>
    <string name="action_delete_now">Delete now</string>
    <string name="action_edit_as_new">Edit as new</string>
    <string name="action_font_larger">Larger font</string>
    <string name="action_font_smaller">Smaller font</string>
    <string name="action_force_white_disable">Dark background</string>
    <string name="action_force_white_enable">White background</string>
    <string name="action_forward">Forward</string>
    <string name="action_insert_contact">Insert contact</string>
    <string name="action_mark_read">Mark read</string>
    <string name="action_mark_unread">Mark unread</string>
    <string name="action_more">More</string>
    <string name="action_move_archive">Move to archive</string>
    <string name="action_move_deleted">Delete</string>
    <string name="action_move_spam">Move to spam</string>
    <string name="action_move_to">Move to folder…</string>
    <string name="action_print">Print</string>
    <string name="action_reply">Reply</string>
    <string name="action_reply_all">Reply to all</string>
    <string name="action_reply_sender">Reply to sender</string>
    <string name="action_revert_autofit">Revert autofit</string>
    <string name="action_save">Save</string>
    <string name="action_save_eml">Save as EML</string>
    <string name="action_save_pdf">Save as PDF</string>
    <string name="action_select_all">Select all</string>
    <string name="action_send_later">Send later</string>
    <string name="action_send_now">Send now</string>
    <string name="action_snooze">Snooze</string>
    <string name="action_star_clear">Clear star</string>
    <string name="action_star_set">Star</string>
    <string name="action_to_calendar">Send to Calendar</string>
    <string name="action_to_google_translate">Send to Google Translate</string>
    <string name="action_to_yandex_translate">Send to Yandex Translate</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_view">View</string>
    <string name="compose_delete_draft">Delete draft</string>
    <string name="compose_read_receipt">Request read receipt</string>
    <string name="format_blockquote">Quote</string>
    <string name="format_bold">Bold</string>
    <string name="format_clear">Clear format</string>
    <string name="format_color_fill">Fill color</string>
    <string name="format_color_text">Text color</string>
    <string name="format_font_name">Typeface</string>
    <string name="format_font_size">Text size</string>
    <string name="format_image_delete">Delete</string>
    <string name="format_image_rotate_left">Rotate left</string>
    <string name="format_image_rotate_right">Rotate right</string>
    <string name="format_image_scale_100">Original size</string>
    <string name="format_image_scale_25">Size: ¼</string>
    <string name="format_image_scale_50">Size: ½</string>
    <string name="format_image_scale_75">Size: ¾</string>
    <string name="format_indent_decrease">Decrease indent</string>
    <string name="format_indent_increase">Increase indent</string>
    <string name="format_insert_image">Insert image</string>
    <string name="format_insert_link">Insert link</string>
    <string name="format_insert_snippet">Insert snippet</string>
    <string name="format_italic">Italic</string>
    <string name="format_list_bulleted">Bulleted list</string>
    <string name="format_list_numbered">Numbered list</string>
    <string name="format_underlined">Underlined</string>
    <string name="prefs_about_header_title">About</string>
    <string name="prefs_account_list_header_title">Account list view</string>
    <string name="prefs_analytics_enable">Anonymous analytics</string>
    <string name="prefs_backup_header_title">Backup and restore</string>
    <string name="prefs_blocked_header_title">Blocked senders</string>
    <string name="prefs_compose_header_title">Composing and sending</string>
    <string name="prefs_enable_logging">Enable logging</string>
    <string name="prefs_end_time">End time</string>
    <string name="prefs_error_notify_settings">Error notification settings</string>
    <string name="prefs_message_list_header_title">Message list view</string>
    <string name="prefs_message_view_after_op">After deleting a message, etc.</string>
    <string name="prefs_message_view_autofit_to_width">Fit messages to screen width</string>
    <string name="prefs_message_view_autolink_phone_numbers">Highlight phone numbers</string>
    <string name="prefs_message_view_block_linked">Block linked images</string>
    <string name="prefs_message_view_chrome_tabs">Built-in web browser</string>
    <string name="prefs_message_view_header_title">Message view</string>
    <string name="prefs_message_view_hide_quoted">Hide quoted text</string>
    <string name="prefs_message_view_mark_read">Mark read</string>
    <string name="prefs_message_view_reset_saved">Reset saved trusted senders</string>
    <string name="prefs_message_view_show_details">Show details by default</string>
    <string name="prefs_message_view_trust_contacts">Trust senders in Contacts app</string>
    <string name="prefs_nav_drawer_header_title">Side panel</string>
    <string name="prefs_notify_action_1">Action 1</string>
    <string name="prefs_notify_action_2">Action 2</string>
    <string name="prefs_notify_action_3">Action 3</string>
    <string name="prefs_notify_action_snooze_value">Snooze delay</string>
    <string name="prefs_notify_combined">Open into Combined view</string>
    <string name="prefs_notify_enable">Enable notifications</string>
    <string name="prefs_notify_errors_section">Errors</string>
    <string name="prefs_notify_header_title">Notifications</string>
    <string name="prefs_notify_messages_section">Messages</string>
    <string name="prefs_notify_settings">Notification settings</string>
    <string name="prefs_permissions_header_title">Permissions</string>
    <string name="prefs_security_header_title">Security</string>
    <string name="prefs_snooze_header_title">Snooze</string>
    <string name="prefs_start_time">Start time</string>
    <string name="prefs_storage_header_title">Storage</string>
    <string name="prefs_thread_header_title">Message grouping</string>
    <string name="prefs_title_general">General</string>
    <string name="prefs_ui_compact_layouts">Compact layouts</string>
    <string name="prefs_ui_dark_theme_at_night">Dark theme at night</string>
    <string name="prefs_ui_full_folder_names">Show full folder names</string>
    <string name="prefs_ui_header_title">Look and feel</string>
    <string name="prefs_ui_initial_state">Initial screen</string>
    <string name="prefs_ui_locale_title">Language</string>
    <string name="prefs_ui_pure_black">Pure black background</string>
    <string name="prefs_ui_replace_folder_names">Replace standard folder names</string>
    <string name="prefs_ui_scroll_panel">Scroll the top panel</string>
    <string name="prefs_ui_theme">Theme</string>
    <string name="prefs_ui_theme_accent_color">Accent color</string>
    <string name="prefs_ui_theme_button_color">Button color</string>
    <string name="prefs_ui_thin_fonts">Thin fonts</string>
    <string name="prefs_ui_total_counts">Show total message counts</string>
    <string name="prefs_ui_use_background_image">Wallpaper</string>
    <string name="prefs_verbose_logging">Verbose</string>
</resources>